Fsck successfully compiled. Function qsort() replaced by one from 2.11BSD - it is more compact. Added function calloc(). Fixed bug in bin/strip - incorrectly written header. Fixed bug in pcc - align strings to even number of bytes. Fixed bug in optimizer - incorrect allocation of local variables in stack, when size exceeded 127 bytes.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-ETC		= etc/init etc/glob etc/mknod etc/mkfs
+ETC		= etc/init etc/glob etc/mknod etc/mkfs etc/fsck
 BIN		= bin/sh bin/ls bin/echo bin/cal bin/cp bin/date bin/mkdir \
 		  bin/sync bin/mv bin/rm bin/rmdir bin/stty bin/od bin/ed \
 		  bin/cat bin/ln bin/wc bin/pwd bin/df bin/mount bin/umount
