--- a/src/etc/Makefile
+++ b/src/etc/Makefile
@@ -18,8 +18,7 @@ SIZE		= pdp11-size -o
 CFLAGS		= -O -I../libc
 LDFLAGS		= -a$(BOTUSR)
 
-PROGS		= init glob mknod mkfs
-# TODO: fsck
+PROGS		= init glob mknod mkfs fsck
 
 all:		$(PROGS)
 
@@ -31,6 +30,10 @@ clean:
 		pdp11-disasm -a$(BOTUSR) $@ > $@.dis
 
 mkfs:		mkfs.o ../libfs/libfs.a
+		$(CC) $(LDFLAGS) -v -o $@ $^ ../libfs/libfs.a
+		pdp11-disasm -a$(BOTUSR) $@ > $@.dis
+
+fsck:		fsck.o ../libfs/libfs.a
 		$(CC) $(LDFLAGS) -v -o $@ $^ ../libfs/libfs.a
 		pdp11-disasm -a$(BOTUSR) $@ > $@.dis
 
@@ -53,11 +56,18 @@ depend:
 ### DO NOT DELETE THIS LINE
 check.o: check.c
 clri.o: clri.c ../libc/sys/types.h
-glob.o: glob.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h ../libc/dirent.h
+fsck.o: fsck.c ../libc/stdio.h ../libc/ansidecl.h ../libc/string.h \
+  ../libc/stdlib.h ../libc/time.h ../libc/unistd.h ../libc/dirent.h \
+  ../libc/sys/fs.h ../libc/sys/stat.h
+glob.o: glob.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h \
+  ../libc/dirent.h
 init.o: init.c ../libc/unistd.h ../libc/ansidecl.h
 kdmp.o: kdmp.c
-mkfs.o: mkfs.c ../libc/stdio.h ../libc/ansidecl.h ../libc/stdlib.h ../libc/string.h ../libc/time.h ../libc/unistd.h ../libc/fcntl.h ../libc/sys/fs.h ../libc/sys/stat.h
-mknod.o: mknod.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h ../libc/sys/stat.h
+mkfs.o: mkfs.c ../libc/stdio.h ../libc/ansidecl.h ../libc/stdlib.h \
+  ../libc/string.h ../libc/time.h ../libc/unistd.h ../libc/fcntl.h \
+  ../libc/sys/fs.h ../libc/sys/stat.h
+mknod.o: mknod.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h \
+  ../libc/sys/stat.h
 mkpt.o: mkpt.c
 # DEPENDENCIES MUST END AT END OF FILE
 # IF YOU PUT STUFF HERE IT WILL GO AWAY
