--- a/src/libc/Makefile
+++ b/src/libc/Makefile
@@ -20,7 +20,7 @@ SRCS		= crt0.S nullsys.S nosys.S \
 		  execv.S execl.S chdir.S time.S mknod.S chmod.S sbrk.S \
 		  stat.S seek.S getpid.S getuid.S stime.S fstat.S \
 		  stty.S gtty.S sync.S dup.S signal.S setjmp.S \
-		  vprintf.c printf.c atoi.c ctime.c malloc.c \
+		  vprintf.c printf.c atoi.c ctime.c malloc.c calloc.c \
 		  strcat.c strchr.c strcmp.c strcpy.c strlen.c \
 		  strncat.c strncmp.c strncpy.c strrchr.c \
 		  memccpy.c memchr.c memcmp.c memcpy.c memset.c qsort.c \
@@ -32,7 +32,7 @@ OBJS		= nullsys.o nosys.o cerror.o exit.o fork.o read.o write.o \
 		  execv.o execl.o chdir.o time.o mknod.o chmod.o sbrk.o \
 		  stat.o seek.o getpid.o getuid.o stime.o fstat.o \
 		  stty.o gtty.o sync.o dup.o signal.o setjmp.o \
-		  vprintf.o printf.o atoi.o ctime.o malloc.o \
+		  vprintf.o printf.o atoi.o ctime.o malloc.o calloc.o \
 		  strcat.o strchr.o strcmp.o strcpy.o strlen.o \
 		  strncat.o strncmp.o strncpy.o strrchr.o \
 		  memccpy.o memchr.o memcmp.o memcpy.o memset.o qsort.o \
@@ -89,6 +89,9 @@ getuid.o: getuid.S syscall.h
 gtty.o: gtty.S syscall.h
 link.o: link.S syscall.h
 mknod.o: mknod.S syscall.h
+mount.o: mount.S
+nosys.o: nosys.S
+nullsys.o: nullsys.S
 open.o: open.S syscall.h
 read.o: read.S syscall.h
 sbrk.o: sbrk.S syscall.h
@@ -100,22 +103,27 @@ stime.o: stime.S syscall.h
 stty.o: stty.S syscall.h
 sync.o: sync.S syscall.h
 time.o: time.S syscall.h
+umount.o: umount.S
 unlink.o: unlink.S syscall.h
 wait.o: wait.S syscall.h
 write.o: write.S syscall.h
 atoi.o: atoi.c stdlib.h ansidecl.h
+calloc.o: calloc.c stdlib.h ansidecl.h
 closedir.o: closedir.c dirent.h ansidecl.h
 ctime.o: ctime.c time.h ansidecl.h string.h
+isatty.o: isatty.c unistd.h ansidecl.h sgtty.h
 malloc.o: malloc.c stdlib.h ansidecl.h unistd.h
 memccpy.o: memccpy.c string.h ansidecl.h
 memchr.o: memchr.c string.h ansidecl.h
 memcmp.o: memcmp.c string.h ansidecl.h
 memcpy.o: memcpy.c string.h ansidecl.h
 memset.o: memset.c string.h ansidecl.h
+mkstemp.o: mkstemp.c stdlib.h ansidecl.h string.h
 opendir.o: opendir.c dirent.h ansidecl.h
 printf.o: printf.c stdlib.h ansidecl.h stdarg.h
 qsort.o: qsort.c stdlib.h ansidecl.h
 readdir.o: readdir.c dirent.h ansidecl.h
+readmtab.o: readmtab.c string.h ansidecl.h unistd.h mtab.h a.out.h
 strcat.o: strcat.c string.h ansidecl.h
 strchr.o: strchr.c string.h ansidecl.h
 strcmp.o: strcmp.c string.h ansidecl.h
