Added the low stack (fixed size) option. libc needs to be built with LOWSTACK and installed before running make in src/. The extra space in .bss for stack is requested by the -t option in ld. Swap space squeezing works but is not enabled by default. The STOP key in BK-0010 now works as an INTR char.

--- a/src/Makefile
+++ b/src/Makefile
@@ -32,7 +32,7 @@ root.dsk:	$(SYS) $(ETC) $(BIN)
 bkbuild:	$(BKSYS) $(ETC) $(BIN)
 
 bkroot.dsk:	clean
-		$(MAKE) BOTUSR=02000 bkbuild
+		$(MAKE) BOTUSR=02000 LOWSTACK=1 bkbuild
 		pdp11-strip $(ETC) $(BIN)
 		$(FSUTIL) -F -n -s819200 -bsys/bkboot $@
 		cp sys/bsx .
