Fixed hash bug in cross-devel/as; converted devel/cc and its parser to the new syntax; changed link base for devel/ld; added pipe and execvp to libc; simplified mkstemp; used optimizeable negative constants in PCC, removed dead code in bkfd.c

--- a/src/libc/Makefile
+++ b/src/libc/Makefile
@@ -24,7 +24,7 @@ SRCS		= crt0.S nullsys.S nosys.S \
 		  strncat.c strncmp.c strncpy.c strrchr.c \
 		  memccpy.c memchr.c memcmp.c memcpy.c memset.c qsort.c \
 		  opendir.c closedir.c readdir.c isatty.c mkstemp.c \
-		  readmtab.c mount.S umount.S sleep.S alarm.S
+		  readmtab.c mount.S umount.S sleep.S alarm.S pipe.c execvp.c
 
 OBJS		= nullsys.o nosys.o cerror.o exit.o fork.o read.o write.o \
 		  open.o creat.o close.o wait.o link.o unlink.o \
@@ -36,7 +36,7 @@ OBJS		= nullsys.o nosys.o cerror.o exit.o fork.o read.o write.o \
 		  strncat.o strncmp.o strncpy.o strrchr.o \
 		  memccpy.o memchr.o memcmp.o memcpy.o memset.o qsort.o \
 		  opendir.o closedir.o readdir.o isatty.o mkstemp.o \
-		  readmtab.o mount.o umount.o sleep.o alarm.o
+		  readmtab.o mount.o umount.o sleep.o alarm.o pipe.o execvp.o
 
 all:		crt0.o libc.a
 
