Added compile option EIS for PCC compiler - allow using mul, div, ash and ashc instructions. Otherwise call library functions for these operations. This is an intermediate commit - kernel is compiled succesfully, but library functions are not implemented yet.

--- a/cross-devel/pcc/Makefile
+++ b/cross-devel/pcc/Makefile
@@ -4,6 +4,7 @@
 # Makefile for PCC
 #
 #	FIXSTRUCT	no trickery (just output structure)
+#       EIS		use mul, div, ash, ashc instructions
 #
 # Some symbols are specific to certain compilers:
 #	ONEPASS		compile pass 1 and pass 2 together
