Get rid of multiplication in kernel. Swap size per process set to 64 blocks (was 55). Floppy format changed to 720k.

--- a/src/sys/Makefile
+++ b/src/sys/Makefile
@@ -44,7 +44,7 @@ HIBASE		= 0120000
 
 all:		bkunix bkboot
 		@echo "Warning: For BK-0011, size must be less than 040000"
-		$(SIZE) bkunix
+		$(SIZE) bkunix bkboot
 
 clean:
 		rm -f *~ dev/*~ boot/*~ *.o *.s a.out bkunix bkboot bkunix.dis bkunix.map
