Back to using 800k floppies. Renamed imod to irem. Fixed bug in bkfd (missing r4).

--- a/cross-devel/crt/Makefile
+++ b/cross-devel/crt/Makefile
@@ -11,10 +11,10 @@ CFLAGS		= -O
 CPPFLAGS	=
 
 SRCS		= aldiv.S almul.S alrem.S csv.S ldiv.S lmul.S lrem.S udiv.S \
-		  uldiv.S ulrem.S ulsh.S imul.S idiv.S imod.S \
+		  uldiv.S ulrem.S ulsh.S imul.S idiv.S irem.S \
 		  lshr.S lshl.S ishr.S ishl.S
 OBJS		= aldiv.o csv.o almul.o alrem.o ldiv.o lmul.o lrem.o udiv.o \
-		  uldiv.o ulrem.o ulsh.o imul.o	idiv.o imod.o \
+		  uldiv.o ulrem.o ulsh.o imul.o	idiv.o irem.o \
 		  lshr.o lshl.o ishr.o ishl.o
 
 all:		libcrt.a
